--- a/project.config
+++ b/project.config
@@ -1,7 +1,10 @@
-[file_locations]
-invoice_mac_loc =
-tls_cert_loc = 
+[alice]
+address = 127.0.0.1:10001
+admin_mac_loc =
+tls_cert_loc =
 
-[addresses]
-alice = 127.0.0.1:10001
-bob = 127.0.0.1:10002
+[bob]
+address = 127.0.0.1:10002
+admin_mac_loc =
+tls_cert_loc =
+
